<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="layout.ResultsFragment"
    android:orientation="vertical">

    <TextView
        android:id="@+id/results_theme_textview"
        android:text="test"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/results_word_textview"
        android:text="test"
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/results_prev_button"
            android:text="@string/results_previous_button"
            android:minWidth="75dp"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/results_score_button"
            android:text="@string/results_score_button"
            android:minWidth="75dp"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/results_next_button"
            android:text="@string/results_next_button"
            android:minWidth="75dp"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <ListView
        android:id="@+id/results_listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></ListView>

</LinearLayout>
